--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -326,10 +326,6 @@ _worldtmp: _cleantmp _mtreetmp
 .ORDER: _cleantmp _mtreetmp
 
 _cleantmp:
-	@echo
-	@echo "--------------------------------------------------------------"
-	@echo ">>> Rebuilding the temporary build tree"
-	@echo "--------------------------------------------------------------"
 .if !defined(NOCLEAN)
 	rm -rf ${BTOOLSDEST} ${CTOOLSDEST} ${WORLDDEST}
 .else
@@ -339,6 +335,10 @@ _cleantmp:
 .endif
 
 _mtreetmp:
+	@echo
+	@echo "--------------------------------------------------------------"
+	@echo ">>> Rebuilding the temporary build tree"
+	@echo "--------------------------------------------------------------"
 	mkdir -p ${DESTDIRBASE} ${BTOOLSDEST} ${CTOOLSDEST} ${WORLDDEST}
 .for _dir in ${WORLDDEST} ${BTOOLSDEST} ${CTOOLSDEST}
 	mtree -deU -f ${.CURDIR}/etc/mtree/BSD.root.dist	\
@@ -405,7 +405,7 @@ _depend:
 everything:
 	@echo
 	@echo "--------------------------------------------------------------"
-	@echo ">>> stage 4d: building everything.."
+	@echo ">>> stage 4d: building everything"
 	@echo "--------------------------------------------------------------"
 	cd ${.CURDIR}; ${WMAKE} all
 _initrd:
@@ -478,9 +478,18 @@ crossworld: _worldtmp _bootstrap-tools _obj _build-tools _cross-tools
 # Checks to be sure system is ready for installworld
 #
 installcheck: _iwinit
-	@pw usershow _pflogd || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
-	@pw groupshow authpf || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
-	@pw groupshow _pflogd || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
+.for _user in _pflogd
+	@pw usershow ${_user} >/dev/null || { \
+	    echo "You may need to run 'make preupgrade' first"; \
+	    /usr/bin/false; \
+	}
+.endfor
+.for _group in _pflogd authpf
+	@pw groupshow ${_group} >/dev/null || { \
+	    echo "You may need to run 'make preupgrade' first"; \
+	    /usr/bin/false; \
+	}
+.endfor
 .if !defined(OVERRIDE_CHECKS)
 .if !defined(DESTDIR) || ${DESTDIR} == "" || ${DESTDIR} == "/"
 	@case `uname -r` in 1.2*|1.3-*|1.3.*|1.4.*|1.5.0-*|1.5.1-*|1.5.2-*|1.5.3-*) echo "You must upgrade your kernel to at least 1.5.4 and reboot before you can safely installworld, due to libc/system call ABI changes" ; /usr/bin/false ; esac
@@ -514,13 +523,19 @@ installworld: installcheck
 installworld-force:
 	@echo "Doing a forced installworld.  This will install to a temporary directory,"
 	@echo "then copy the main binaries and libraries with a static cpdup to ${DESTDIR}/"
-	@echo "and finally will issue a normal installworld.  Starting in 5 seconds.".
-	@echo "^C to abort."
+	@echo "and finally will issue a normal installworld."
+	@echo
+	@echo "Starting in 5 seconds.  ^C to abort."
+	@echo
 	sleep 1
-	rm -rf /usr/obj/temp > /dev/null 2>& 1 || chflags -R noschg /usr/obj/temp
+	rm -rf /usr/obj/temp > /dev/null 2>&1 || chflags -R noschg /usr/obj/temp
 	rm -rf /usr/obj/temp
 	mkdir -p /usr/obj/temp/cpdup/bin
-	(cd ${.CURDIR}/bin/cpdup; make clean && make obj && make clean && make CFLAGS=-static all install DESTDIR=/usr/obj/temp/cpdup NOMAN=TRUE)
+	(cd ${.CURDIR}/bin/cpdup; \
+		make clean && \
+		make obj && \
+		make clean && \
+		make CFLAGS=-static all install DESTDIR=/usr/obj/temp/cpdup NOMAN=TRUE)
 	@echo "XXXXXXXXX Installing to temporary XXXXXXXXX"
 	@sleep 1
 	(cd ${.CURDIR}; ${MAKE} installworld DESTDIR=/usr/obj/temp > /dev/null 2>&1)
@@ -554,7 +569,7 @@ reinstall:
 	cd ${.CURDIR}; make -f Makefile.inc1 hierarchy
 	@echo
 	@echo "--------------------------------------------------------------"
-	@echo ">>> Installing everything.."
+	@echo ">>> Installing everything"
 	@echo "--------------------------------------------------------------"
 	cd ${.CURDIR}; make -f Makefile.inc1 install
 
