--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3914,6 +3914,8 @@ TO_REMOVE+=/usr/share/man/man1/strings225.1.gz
 TO_REMOVE+=/usr/share/man/man1/strip225.1.gz
 TO_REMOVE+=/usr/libexec/dhcpcd-hooks/02-dump
 TO_REMOVE+=/usr/lib/libtcplay.so.2
+TO_REMOVE+=/usr/include/pcap/export-defs.h
+TO_REMOVE+=/usr/lib/libpcap.so.3
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
