Add makefiles for gcc120
Based on the makefiles for gcc 8.3, by way of 9.5, 10.5, and 11.5

gcc has added:
* a new library "libcody"
* a new place for compiler-related tools "c++tools"
* the static analyzer "gcc/analyzer"

Also, all (C++) .c files in gcc/ have been renamed to .cc

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -56,6 +56,28 @@
             profile
             ..
         ..
+        gcc120
+            plugin
+                include
+                    ada
+                        gcc-interface
+                        ..
+                    ..
+                    objc
+                    ..
+                    c-family
+                    ..
+                    config
+                        i386
+                        ..
+                    ..
+                    cp
+                    ..
+                ..
+            ..
+            profile
+            ..
+        ..
         i18n
         ..
         priv
@@ -75,6 +97,10 @@
             ..
         ..
         gcc80
+            ssp
+            ..
+        ..
+        gcc120
             ssp
             ..
         ..
@@ -107,6 +133,8 @@
         gcc47
         ..
         gcc80
+        ..
+        gcc120
         ..
         lpr
             ru
