--- a/etc/mtree/BSD.include.dist
+++ b/etc/mtree/BSD.include.dist
@@ -172,6 +172,84 @@
             tr2
             ..
         ..
+        12.0
+            backward
+            ..
+            bits
+            ..
+            debug
+            ..
+            decimal
+            ..
+            experimental
+                bits
+                ..
+            ..
+            ext
+                pb_ds
+                    detail
+                        bin_search_tree_
+                        ..
+                        binary_heap_
+                        ..
+                        binomial_heap_
+                        ..
+                        binomial_heap_base_
+                        ..
+                        branch_policy
+                        ..
+                        cc_hash_table_map_
+                        ..
+                        eq_fn
+                        ..
+                        gp_hash_table_map_
+                        ..
+                        hash_fn
+                        ..
+                        left_child_next_sibling_heap_
+                        ..
+                        list_update_map_
+                        ..
+                        list_update_policy
+                        ..
+                        ov_tree_map_
+                        ..
+                        pairing_heap_
+                        ..
+                        pat_trie_
+                        ..
+                        rb_tree_map_
+                        ..
+                        rc_binomial_heap_
+                        ..
+                        resize_policy
+                        ..
+                        splay_tree_
+                        ..
+                        thin_heap_
+                        ..
+                        tree_policy
+                        ..
+                        trie_policy
+                        ..
+                        unordered_iterator
+                        ..
+                    ..
+                ..
+            ..
+            parallel
+            ..
+            profile
+                impl
+                ..
+            ..
+            pstl
+            ..
+            tr1
+            ..
+            tr2
+            ..
+        ..
     ..
     compat
         asm
