Disable narrowing warning when gcc10+ is used

--- a/gnu/usr.bin/cc80/support-libs/libcommon-target/Makefile
+++ b/gnu/usr.bin/cc80/support-libs/libcommon-target/Makefile
@@ -21,7 +21,7 @@ OBJS=		${OBJS-libcommon-target}
 CFLAGS+=	-DPREFIX=\"${TOOLS_PREFIX}/usr\"
 
 # for opts-common.c
-.if ${CCVER:Mgcc80}
+.if (${CCVER:Mgcc80} || ${CCVER:Mgcc1[0-9]0})
 CXXFLAGS+=	-Wno-narrowing
 .elif ${CCVER:Mclang*}
 CXXFLAGS+=	-Wno-c++11-narrowing
