Make gcc 120 the alternative compiler

--- a/gnu/usr.bin/Makefile
+++ b/gnu/usr.bin/Makefile
@@ -31,6 +31,10 @@ _compiler_dir= cc80
 SUBDIR+= cc47
 _altcompiler_dirs+= cc47
 . endif
+. if ${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc120}
+SUBDIR+= cc120
+_altcompiler_dirs+= cc120
+. endif
 .endif
 
 .ORDER: ${BU_PRIMARY} gmp mpfr mpc ${_compiler_dir} ${_altcompiler_dirs}
