--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1051,6 +1051,9 @@ _gcc_common_cross= lib/libz gnu/usr.bin/gmp gnu/usr.bin/mpfr gnu/usr.bin/mpc
 . if ${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc47}
 _altcompiler_cross+= ${_gcc47_cross}
 . endif
+. if ${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc120}
+_altcompiler_cross+= ${_gcc120_cross}
+. endif
 .endif
 
 _basecompiler_cross= ${_gcc80_cross}
@@ -1115,6 +1118,11 @@ libraries:
 	    HOST_CCVER=${HOST_CCVER} CCVER=gcc47 \
 		make -f Makefile.inc1 _startup_libs47 -DSYSBUILD -DLIBGCC_ONLY;
 . endif
+. if ${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc120}
+	cd ${.CURDIR}; \
+	    HOST_CCVER=${HOST_CCVER} CCVER=gcc120 \
+		make -f Makefile.inc1 _startup_libs120 -DSYSBUILD -DLIBGCC_ONLY;
+. endif
 .endif
 	cd ${.CURDIR}; \
 	    make -f Makefile.inc1 _startup_libs -DSYSBUILD && \
@@ -1150,8 +1158,8 @@ _startup_libs120=	gnu/usr.bin/cc120/cc_prep \
 			gnu/lib/gcc120/libgcc_pic
 
 .if !defined(NO_ALTCOMPILER)
-. if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc47})
-_startup_libs_alt+=	_startup_libs47
+. if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc120})
+_startup_libs_alt+=	_startup_libs120
 . endif
 .endif
 
