Remove gcc47 related files

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -36,15 +36,20 @@ TO_REMOVE+=/etc/defaults/pccard
 TO_REMOVE+=/etc/rc.d/pccard
 TO_REMOVE+=/etc/defaults/pccard.conf
 TO_REMOVE+=/usr/lib/gcc3
+TO_REMOVE+=/usr/lib/gcc47
 TO_REMOVE+=/usr/libexec/gcc3
+TO_REMOVE+=/usr/libexec/gcc47
 TO_REMOVE+=/usr/libdata/ldscripts
 TO_REMOVE+=/usr/libdata/gcc2
 TO_REMOVE+=/usr/libdata/gcc3
+TO_REMOVE+=/usr/libdata/gcc47
 TO_REMOVE+=/usr/libexec/elf
 TO_REMOVE+=/usr/libexec/aout
 TO_REMOVE+=/usr/bin/gcc2
 TO_REMOVE+=/usr/bin/gcc3
+TO_REMOVE+=/usr/bin/gcc47
 TO_REMOVE+=/usr/include/g++
+TO_REMOVE+=/usr/include/c++/4.7
 TO_REMOVE+=/usr/bin/genassym
 TO_REMOVE+=/usr/bin/gensetdefs
 TO_REMOVE+=/usr/bin/nawk
